--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -39,7 +39,7 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-weight: normal;
+  font-weight: 900;
 }
 
 img {
@@ -341,6 +341,8 @@ section {
 #section-intro .intro-container {
   position: relative;
   z-index: 10;
+  height: 100vh;
+  overflow: hidden;
 }
 #section-intro .intro-video {
   width: 100%;
@@ -361,7 +363,6 @@ section {
   width: 4.875vw;
 }
 #section-intro .intro-title {
-  font-weight: normal;
   font-size: 5rem;
   line-height: 1em;
   letter-spacing: -0.2px;
@@ -433,7 +434,7 @@ section {
   width: 100%;
 }
 #section-transform .transform-title-container {
-  width: 500px;
+  width: 45vw;
   overflow: visible;
   position: absolute;
   top: 37.45vh;
